<resources>
    <string name="app_name">AndroMyography</string>
    <string name="add_new_patient">Add New Patient</string>
    <string name="search_patient">Search Patient</string>
    <string name="edit_patient_profile">Edit Patient Profile</string>
    <string name="how_to_use_andromyography">How to Use AndroMyography</string>
    <string name="about_us">About Us</string>
    <string name="welcome_to_andromyography">Welcome to AndroMyography</string>
    <string name="start_the_test_and_check_your_muscles">Start the Test and Check Your Muscles</string>
    <string name="design_by_abbas_mahdiyeh">Design by Abbas Mahdiyeh</string>
    <string name="id_number">ID Number</string>
    <string name="name">Name</string>
    <string name="family">Family</string>
    <string name="age">Age</string>
    <string name="phone_number">Phone Number</string>
    <string name="todo">TODO</string>
    <string name="damaged_muscle">Damaged Muscle</string>
    <string name="submit_and_start_test">Submit and Start Test</string>
    <string name="search_patient_by_id">Search Patient by ID</string>
    <string name="please_enter_patient_id">Please Enter Patient ID</string>
    <string name="edit_patient_information_by_id">Edit Patient Information by ID</string>
    <string name="edit_patient">Edit Patient</string>
    <string name="patient_search_result">Patient Search Result</string>
    <string name="id">ID</string>
    <string name="phone">Phone</string>
    <string name="gender">Gender</string>
    <string name="back">Back</string>
    <string name="show_test_result">Show Test Result</string>
    <string name="edit_patient_information">Edit patient Information</string>
    <string name="apply_edit">Apply Edit</string>
    <string name="apply">Apply</string>
    <string name="follow_us">Follow US</string>
    <string name="about">About</string>
    <string name="about_text">This is a about text for test</string>
    <string name="turn_on_bluetooth">Turn ON Bluetooth</string>
    <string name="turn_off_bluetooth">Turn OFF Bluetooth</string>
    <string name="refresh_for_available_device">Refresh For Available Device</string>
    <string name="start_test">Start Test</string>
    <string name="stop_test">Stop Test</string>
    <string name="stop_test_and_save">Stop Test and Save</string>
    <string-array name="gender_spinner">
        <item>Choose the Gender...</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>