<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".BluetoothConfigurationAndEMGTest.ElectromyographyAnalysis">

    <LinearLayout
        android:id="@+id/emgLogo"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="center"
        tools:ignore="MissingConstraints">

        <ImageView
            android:src="@drawable/emg_test_logo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/todo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/chart_linear"
        app:layout_constraintTop_toBottomOf="@id/emgLogo"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_margin="10dp"
        tools:ignore="MissingConstraints">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/emg_lineChart"
            android:layout_width="match_parent"
            android:layout_height="350dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/click_linear"
        app:layout_constraintTop_toBottomOf="@id/chart_linear"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <Button
            android:id="@+id/btn_startTest"
            android:text="@string/start_test"
            android:textColor="@color/white"
            android:background="@drawable/button_style"
            android:layout_width="150dp"
            android:layout_height="40dp"/>

        <ImageView
            android:id="@+id/symbol_of_test"
            android:src="@drawable/disconnect_symbol"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/todo" />

        <Button
            android:id="@+id/btn_stopTest"
            android:text="@string/stop_test"
            android:textColor="@color/white"
            android:background="@drawable/button_style"
            android:layout_width="150dp"
            android:layout_height="40dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"

        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/click_linear"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <Button
            android:id="@+id/btn_stop_save_test"
            android:text="@string/stop_test_and_save"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:background="@drawable/button_style"
            android:layout_width="200dp"
            android:layout_height="30dp"/>

        <ImageView
            android:src="@drawable/save_symbol"
            android:layout_marginStart="10dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/todo" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>