<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".Patient.EditPatientProfileForm">

    <LinearLayout
        android:id="@+id/lep_form_logo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        tools:ignore="MissingConstraints">

        <ImageView
            android:src="@drawable/edit_patient_profile_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            tools:ignore="ContentDescription" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/lep_form_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lep_form_logo"
        android:layout_marginTop="5dp"
        android:gravity="center"
        tools:ignore="MissingConstraints" >

        <TextView
            android:text="@string/edit_patient_information"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:gravity="center"
            android:background="@drawable/button_style"
            android:layout_width="300dp"
            android:layout_height="40dp"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/lep_form_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lep_form_text"
        android:layout_marginTop="5dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:paddingStart="7dp"
            android:src="@drawable/correct_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            tools:ignore="RtlSymmetry"
            android:contentDescription="@string/todo" />

        <EditText
            android:id="@+id/edit_id_field"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:inputType="number"
            android:background="@drawable/text_view_style"
            android:hint="@string/id_number"
            android:paddingStart="10dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:layout_marginStart="15dp"
            tools:ignore="MissingConstraints,RtlSymmetry"
            android:importantForAutofill="no" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/lep_form_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lep_form_id"
        android:layout_marginTop="5dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:paddingStart="7dp"
            android:src="@drawable/correct_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            tools:ignore="RtlSymmetry"
            android:contentDescription="@string/todo" />

        <EditText
            android:id="@+id/edit_name_field"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:inputType="text"
            android:background="@drawable/text_view_style"
            android:hint="@string/name"
            android:paddingStart="10dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:layout_marginStart="15dp"
            tools:ignore="MissingConstraints,RtlSymmetry"
            android:importantForAutofill="no" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/lep_form_family"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lep_form_name"
        android:layout_marginTop="5dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:paddingStart="7dp"
            android:src="@drawable/correct_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            tools:ignore="RtlSymmetry"
            android:contentDescription="@string/todo" />

        <EditText
            android:id="@+id/edit_family_field"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:inputType="text"
            android:background="@drawable/text_view_style"
            android:hint="@string/family"
            android:paddingStart="10dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:layout_marginStart="15dp"
            tools:ignore="MissingConstraints,RtlSymmetry"
            android:importantForAutofill="no" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/lep_form_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lep_form_family"
        android:layout_marginTop="5dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:paddingStart="7dp"
            android:src="@drawable/correct_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            tools:ignore="RtlSymmetry"
            android:contentDescription="@string/todo" />

        <EditText
            android:id="@+id/edit_age_field"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:inputType="number"
            android:background="@drawable/text_view_style"
            android:hint="@string/age"
            android:paddingStart="10dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:layout_marginStart="15dp"
            tools:ignore="MissingConstraints,RtlSymmetry"
            android:importantForAutofill="no" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/lep_form_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lep_form_age"
        android:layout_marginTop="5dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:paddingStart="7dp"
            android:src="@drawable/correct_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            tools:ignore="RtlSymmetry"
            android:contentDescription="@string/todo" />

        <EditText
            android:id="@+id/edit_phone_field"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:inputType="number"
            android:background="@drawable/text_view_style"
            android:hint="@string/phone_number"
            android:paddingStart="10dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:layout_marginStart="15dp"
            tools:ignore="MissingConstraints,RtlSymmetry,TextFields"
            android:importantForAutofill="no" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/lep_form_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lep_form_phone"
        android:layout_marginTop="5dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:paddingStart="7dp"
            android:src="@drawable/correct_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            tools:ignore="RtlSymmetry"
            android:contentDescription="@string/todo" />

        <Spinner
            android:id="@+id/edit_gender_field"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:background="@drawable/text_view_style"
            android:entries="@array/gender_spinner"
            android:paddingStart="10dp"
            android:textColor="@color/white"
            android:layout_marginStart="15dp"
            tools:ignore="MissingConstraints,RtlSymmetry" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/lep_form_damaged_muscle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lep_form_gender"
        android:layout_marginTop="5dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:paddingStart="7dp"
            android:src="@drawable/correct_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            tools:ignore="RtlSymmetry"
            android:contentDescription="@string/todo" />

        <EditText
            android:id="@+id/edit_damaged_muscle_field"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:inputType="text"
            android:background="@drawable/text_view_style"
            android:hint="@string/damaged_muscle"
            android:paddingStart="10dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:layout_marginStart="15dp"
            tools:ignore="MissingConstraints,RtlSymmetry"
            android:importantForAutofill="no" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/apply_changes"
            android:text="@string/apply"
            android:textColor="@color/white"
            android:background="@drawable/button_style"
            android:layout_width="100dp"
            android:layout_height="40dp"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>