<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".LandingActivity.SpalshScreen">

    <LinearLayout
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/welcome_splash"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:gravity="center"
            android:text="@string/welcome_to_andromyography"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/splash_logo_linear"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        android:gravity="center"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/logo_splash"
            android:src="@drawable/main_logo"
            android:layout_marginTop="15dp"
            android:layout_width="250dp"
            android:layout_height="250dp"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/splash_logo_linear"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/check_muscle"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:gravity="center"
            android:text="@string/start_the_test_and_check_your_muscles"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/designByAbbas"
            android:textColor="@color/white"
            android:text="@string/design_by_abbas_mahdiyeh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>